<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/welcome_scroll"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="50dp"
    android:layout_weight="1"
    android:visibility="gone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">


        <!-- WELCOME HEADER -->
        <TextView
            android:id="@+id/welcome_header"
            style="@style/welcome_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/welcome_text1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text1"
            style="@style/guide_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome2"
            app:layout_constraintBottom_toTopOf="@id/decoration_panel"
            app:layout_constraintTop_toBottomOf="@id/welcome_header" />

        <!-- DECORATIVE PANEL -->
        <include
            android:id="@+id/decoration_panel"
            layout="@layout/guide_decoration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/welcome_text2"
            app:layout_constraintTop_toBottomOf="@id/welcome_text1" />

        <TextView
            android:id="@+id/welcome_text2"
            style="@style/guide_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome3"
            app:layout_constraintBottom_toTopOf="@id/welcome_text3"
            app:layout_constraintTop_toBottomOf="@id/decoration_panel" />

        <TextView
            android:id="@+id/welcome_text3"
            style="@style/guide_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome4"
            app:layout_constraintBottom_toTopOf="@id/welcome_text4"
            app:layout_constraintTop_toBottomOf="@id/welcome_text2" />

        <TextView
            android:id="@+id/welcome_text4"
            style="@style/guide_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>